--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
     <nav class="navbar">
         <div class="nav-header">
-            <img src="C:/Users/divya/Documents/SEM 4 NOTES/MVP/logo.png" alt="Logo" class="logo" />
+            <img src="./logo.png" alt="Logo" class="logo" />
             <span class="site-name">Signly</span>
         </div>
         <ul class="nav-links">
@@ -34,7 +34,7 @@
                     <a href="#" class="btn btn-secondary">About Us</a>
                 </div>
             </div>
-            <img src=" C:/Users/divya/Documents/SEM 4 NOTES/MVP/front2.png">
+            <img src="./front2.png">
         </div>
 
         <div class="right-side">
